# RunningMan

./: CMakeLists.txt
data/: sprites.yaml  sprites.yaml~
data/maps/: test01.yaml
docs/: coordinate_grid.vsd
libs/: CMakeLists.txt
libs/lodepng/: CMakeLists.txt
libs/lodepng/src/: lodepng.cpp
scripts/: collect_program_files.py~
src/: #BasicStructs.cpp#  #MovableSprite.cpp#  BasicStructs.cpp  BasicStructs.h  BitmapProvider.cpp  BitmapProvider.h  CMakeLists.txt  CMakeLists.txt~  GameField.cpp  GameField.h  GameViewFrame.cpp  GameViewFrame.h  ImageLoader.cpp  ImageLoader.h  LodePngImageLoader.cpp  LodePngImageLoader.h  MovableSprite.h  Paths.cpp  Paths.h  SdlBitmap.cpp  SdlBitmap.h  Singleton.h  Sprite.cpp  Sprite.h  Sprite.h~  SpriteInfoProvider.cpp  SpriteInfoProvider.h  SpriteProvider.cpp  SpriteProvider.h  StaticSprite.cpp  StaticSprite.h  Surface.h  main.cpp
tests/: CMakeLists.txt  CMakeLists.txt~  Test.cpp
tests/gtest-1.6.0/: CMakeLists.txt
tests/gtest-1.6.0/include/gtest/: gtest-printers.h
tests/gtest-1.6.0/lib/Debug/: gtest.lib
tests/gtest-1.6.0/lib/Release/: gtest.lib
